--- a/index.html
+++ b/index.html
@@ -42,15 +42,25 @@
 
     <main class="page">
         <div class="page__header">
-            <h1 class="page__title">Услуги и сервисы</h1>
+            <div class="page-header__nav">
+                <h1 class="page__title">Услуги и сервисы</h1>
+                <div class="page-header__links">
+                    <div class="page-header__repair">
+                        <a href="#" class="page-header__icon page-header__icon-repair">Оставить заявку</a>
+                    </div>
+                    <div class="page-header__search">
+                        <a href="#" class="page-header__icon page-header__icon-search">Статус ремонта</a>
+                    </div>
+                </div>
+            </div>
             <div class="page__wrapper">
                 <ul class="page__nav">
-                    <li class="nav__item nav__item-active">Ремонтируемые устрой</li>
-                    <li class="nav__item">Дополнительные услуги</li>
-                    <li class="nav__item">Цены на услуги</li>
-                    <li class="nav__item">Специальные цены</li>
-                    <li class="nav__item">Адреса сервисных центров</li>
-                    <li class="nav__item">Отзывы</li>
+                    <li><a class="nav__item nav__item-active" href="#">Ремонтируемые устрой</a></li>
+                    <li><a class="nav__item" href="#">Дополнительные услуги</a></li>
+                    <li><a class="nav__item" href="#">Цены на услуги</a></li>
+                    <li><a class="nav__item" href="#">Специальные цены</a></li>
+                    <li><a class="nav__item" href="#">Адреса сервисных центров</a></li>
+                    <li><a class="nav__item" href="#">Отзывы</a></li>
                     
                 </ul>
             </div>
